# CAD_review

./: .gitignore  docker-compose.yml  multi-agent-cad-review-plan.md  pom.xml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: multi-agent-review-workflow.md  x3-reuse-catalog.md
docs/vector-seed/: building-review-basis-guangzhou-2026-05-21.md  building-review-basis-nanning-2026-05-21.md  building-review-basis-national-2026-05-21.md
scripts/cad-drawing-parser/: README.md  parse_cad.py  pyproject.toml  requirements.txt
scripts/cad-drawing-parser/src/cad_drawing_parser/: __init__.py  cli.py  core.py  dwg.py  jsonio.py
src/main/java/com/luckycat/cadreview/: CadReviewApplication.java
src/main/java/com/luckycat/cadreview/agent/: AgentContext.java  AgentModelRouter.java  AgentOrchestrator.java  AgentRole.java  CadIrCleaner.java  ContextBudget.java  ContextBudgetService.java  ContextEnvelope.java  ContextOverflowPolicy.java  DispatcherAgent.java  DispatcherNextAgent.java  EvidenceChunk.java  EvidenceExtractionClient.java  EvidenceExtractionResult.java  EvidenceExtractorAgent.java  (+16 more)
src/main/resources/: application.yml
src/main/resources/prompts/: dispatcher-system.md  evidence-extractor-system.md  reviewer-system.md  summarizer-system.md
src/main/resources/skills/cad-fire-zone-review/: SKILL.md
src/main/resources/static/: cad-review-workflow.html
src/test/java/com/luckycat/cadreview/: CadReviewApplicationTests.java
src/test/resources/: application.properties
(+87 files in other folders)
